--- a/style.css
+++ b/style.css
@@ -607,7 +607,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
- margin-bottom: 80px;
+        height: 70vh;
 }
 
 .media-box {
