--- a/style.css
+++ b/style.css
@@ -614,7 +614,7 @@
   background-color: #000;
   width: 100%;
   max-width: 600px;
-  padding: 30px 20px;
+  padding-top: 0px 20px;
   box-sizing: border-box;
   text-align: center;
   display: flex;
