--- a/style.css
+++ b/style.css
@@ -596,7 +596,7 @@
   .black-box {
     position: static;
     width: 100%;
-    height: auto;
+    height: 50vh;
     margin-top: 20px;
     padding: 20px;
   }
