--- a/style.css
+++ b/style.css
@@ -596,7 +596,7 @@
   .black-box {
     position: static;
     width: 100%;
-    height: 65vh;
+    height: 1000px;
     margin-top: 20px;
     padding: 20px;
   }
