--- a/style.css
+++ b/style.css
@@ -613,6 +613,7 @@
 .media-box {
   background-color: #000;
   width: 100%;
+  height: 50%;
   max-width: 600px;
   box-sizing: border-box;
   text-align: center;
